--- a/src/main/resources/view/customer_form.fxml
+++ b/src/main/resources/view/customer_form.fxml
@@ -14,7 +14,7 @@
    <children>
       <AnchorPane prefHeight="650.0" prefWidth="1500.0" style="-fx-background-color: #b2bec3;">
          <children>
-            <ImageView fitHeight="317.0" fitWidth="290.0" layoutY="182.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="242.0" fitWidth="290.0" layoutX="10.0" layoutY="232.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@image/R.png" />
                </image>
@@ -24,7 +24,7 @@
                   <Font name="System Bold Italic" size="24.0" />
                </font>
             </Label>
-            <AnchorPane layoutX="312.0" layoutY="98.0" prefHeight="480.0" prefWidth="403.0" style="-fx-background-color: #718093; -fx-background-radius: 40;">
+            <AnchorPane layoutX="312.0" layoutY="124.0" prefHeight="480.0" prefWidth="403.0" style="-fx-background-color: #718093; -fx-background-radius: 40;">
                <children>
                   <Label layoutX="111.0" layoutY="14.0" prefHeight="35.0" prefWidth="196.0" style="-fx-background-color: #81ecec; -fx-background-radius: 30;" text="     Fill this form">
                      <font>
@@ -53,22 +53,22 @@
                      </font></Label>
                </children>
             </AnchorPane>
-            <JFXButton buttonType="RAISED" layoutX="724.0" layoutY="182.0" onAction="#btnAddCustomerOnAction" prefHeight="35.0" prefWidth="122.0" style="-fx-background-color: #44bd32; -fx-background-radius: 30;" text="Add Customer" textFill="#f5f6fa">
+            <JFXButton buttonType="RAISED" layoutX="742.0" layoutY="188.0" onAction="#btnAddCustomerOnAction" prefHeight="35.0" prefWidth="122.0" style="-fx-background-color: #44bd32; -fx-background-radius: 30;" text="Add Customer" textFill="#f5f6fa">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
             </JFXButton>
-            <JFXButton buttonType="RAISED" layoutX="725.0" layoutY="268.0" onAction="#btnUpdateOnAction" prefHeight="35.0" prefWidth="121.0" style="-fx-background-color: #e1b12c; -fx-background-radius: 30;" text="Update Customer" textFill="#f5f6fa">
+            <JFXButton buttonType="RAISED" layoutX="743.0" layoutY="272.0" onAction="#btnUpdateOnAction" prefHeight="35.0" prefWidth="121.0" style="-fx-background-color: #e1b12c; -fx-background-radius: 30;" text="Update Customer" textFill="#f5f6fa">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
             </JFXButton>
-            <JFXButton buttonType="RAISED" layoutX="724.0" layoutY="349.0" onAction="#btnDeleteonAction" prefHeight="35.0" prefWidth="122.0" style="-fx-background-color: #e84118; -fx-background-radius: 30;" text="Delete customer" textFill="#f5f6fa">
+            <JFXButton buttonType="RAISED" layoutX="743.0" layoutY="355.0" onAction="#btnDeleteonAction" prefHeight="35.0" prefWidth="122.0" style="-fx-background-color: #e84118; -fx-background-radius: 30;" text="Delete customer" textFill="#f5f6fa">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
             </JFXButton>
-            <JFXButton buttonType="RAISED" layoutX="724.0" layoutY="423.0" onAction="#btnSearchOnAction" prefHeight="35.0" prefWidth="122.0" style="-fx-background-color: #273c75; -fx-background-radius: 30;" text="Search Customer" textFill="#f5f6fa">
+            <JFXButton buttonType="RAISED" layoutX="743.0" layoutY="439.0" onAction="#btnSearchOnAction" prefHeight="35.0" prefWidth="122.0" style="-fx-background-color: #273c75; -fx-background-radius: 30;" text="Search Customer" textFill="#f5f6fa">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
@@ -93,21 +93,26 @@
                   <TableColumn fx:id="colCustomerTel" prefWidth="131.199951171875" text="Telephone" />
               </columns>
             </TableView>
-            <Label layoutX="1039.0" layoutY="67.0" text="Here is the table View For Customer" textFill="#fc3030">
+            <Label layoutX="1039.0" layoutY="67.0" text="Here is the table View For Customer" textFill="#19249e">
                <font>
                   <Font name="System Bold Italic" size="18.0" />
                </font>
             </Label>
-            <JFXButton buttonType="RAISED" layoutX="35.0" layoutY="586.0" onAction="#btnBackOnAction" prefHeight="35.0" prefWidth="65.0" style="-fx-background-color: #273c75; -fx-background-radius: 20;" text="Back" textFill="#f5f6fa">
+            <JFXButton buttonType="RAISED" layoutX="1395.0" layoutY="33.0" onAction="#btnBackOnAction" prefHeight="35.0" prefWidth="89.0" style="-fx-background-color: #7bed9f; -fx-background-radius: 20;" text="        Home">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
             </JFXButton>
-            <JFXButton buttonType="RAISED" layoutX="724.0" layoutY="494.0" onAction="#btnClearOnAction" prefHeight="35.0" prefWidth="122.0" style="-fx-background-color: #9980FA; -fx-background-radius: 30;" text="Clear" textFill="#f5f6fa">
+            <JFXButton buttonType="RAISED" layoutX="750.0" layoutY="522.0" onAction="#btnClearOnAction" prefHeight="35.0" prefWidth="122.0" style="-fx-background-color: #9980FA; -fx-background-radius: 30;" text="Clear" textFill="#f5f6fa">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
             </JFXButton>
+            <ImageView fitHeight="27.0" fitWidth="24.0" layoutX="1405.0" layoutY="37.0">
+               <image>
+                  <Image url="@image/icons8-home-50.png" />
+               </image>
+            </ImageView>
          </children>
       </AnchorPane>
    </children>
