--- a/src/main/resources/view/employee_form.fxml
+++ b/src/main/resources/view/employee_form.fxml
@@ -14,38 +14,38 @@
    <children>
       <AnchorPane layoutX="-14.0" prefHeight="650.0" prefWidth="1500.0" style="-fx-background-color: #c8d6e5;">
          <children>
-            <ImageView fitHeight="235.0" fitWidth="280.0" layoutX="30.0" layoutY="159.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="237.0" fitWidth="280.0" layoutX="21.0" layoutY="243.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@image/employee_manage.jpg" />
                </image>
             </ImageView>
-            <AnchorPane layoutX="331.0" layoutY="134.0" prefHeight="492.0" prefWidth="330.0" style="-fx-background-color: #718093; -fx-background-radius: 40;">
+            <AnchorPane layoutX="336.0" layoutY="125.0" prefHeight="448.0" prefWidth="330.0" style="-fx-background-color: #718093; -fx-background-radius: 40;">
                <children>
-                  <TextField fx:id="txtid" layoutX="112.0" layoutY="150.0" prefHeight="26.0" prefWidth="186.0" style="-fx-background-radius: 30;" />
-                  <TextField fx:id="txtaddress" layoutX="112.0" layoutY="308.0" prefHeight="26.0" prefWidth="186.0" style="-fx-background-radius: 30;" />
-                  <TextField fx:id="txttel" layoutX="112.0" layoutY="400.0" prefHeight="26.0" prefWidth="186.0" style="-fx-background-radius: 30;" />
+                  <TextField fx:id="txtid" layoutX="112.0" layoutY="107.0" prefHeight="26.0" prefWidth="186.0" style="-fx-background-radius: 30;" />
+                  <TextField fx:id="txtaddress" layoutX="112.0" layoutY="266.0" prefHeight="26.0" prefWidth="186.0" style="-fx-background-radius: 30;" />
+                  <TextField fx:id="txttel" layoutX="112.0" layoutY="354.0" prefHeight="26.0" prefWidth="186.0" style="-fx-background-radius: 30;" />
                   <Label layoutX="92.0" layoutY="14.0" text="Fill this Form">
                      <font>
                         <Font name="System Bold" size="24.0" />
                      </font>
                   </Label>
-                  <Label layoutX="25.0" layoutY="154.0" text="Emp Id">
+                  <Label layoutX="25.0" layoutY="112.0" text="Emp Id">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font></Label>
-                  <Label layoutX="25.0" layoutY="229.0" text="Name">
+                  <Label layoutX="28.0" layoutY="188.0" text="Name">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font></Label>
-                  <Label layoutX="15.0" layoutY="312.0" text="Address">
+                  <Label layoutX="22.0" layoutY="270.0" text="Address">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font></Label>
-                  <Label layoutX="15.0" layoutY="404.0" text="Telephone">
+                  <Label layoutX="22.0" layoutY="358.0" text="Telephone">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font></Label>
-                  <TextField fx:id="txtname" layoutX="112.0" layoutY="225.0" prefHeight="26.0" prefWidth="186.0" style="-fx-background-radius: 30;" />
+                  <TextField fx:id="txtname" layoutX="112.0" layoutY="184.0" prefHeight="26.0" prefWidth="186.0" style="-fx-background-radius: 30;" />
                </children>
             </AnchorPane>
             <Label layoutX="346.0" layoutY="14.0" prefHeight="35.0" prefWidth="391.0" style="-fx-background-color: #8c7ae6; -fx-background-radius: 40;" text="               Manage Employee" textFill="#f5f6fa">
@@ -53,22 +53,22 @@
                   <Font name="System Bold" size="24.0" />
                </font>
             </Label>
-            <JFXButton buttonType="RAISED" layoutX="681.0" layoutY="194.0" onAction="#btnAddonAction" prefHeight="42.0" prefWidth="138.0" style="-fx-background-color: #20bf6b; -fx-background-radius: 20;" text="Add Employee" textFill="#f5f6fa">
+            <JFXButton buttonType="RAISED" layoutX="688.0" layoutY="188.0" onAction="#btnAddonAction" prefHeight="42.0" prefWidth="138.0" style="-fx-background-color: #20bf6b; -fx-background-radius: 20;" text="Add Employee" textFill="#f5f6fa">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
             </JFXButton>
-            <JFXButton buttonType="RAISED" layoutX="681.0" layoutY="274.0" onAction="#btnDeleteOnAction" prefHeight="42.0" prefWidth="138.0" style="-fx-background-color: #b71540; -fx-background-radius: 20;" text="Delete Employee" textFill="#f5f6fa">
+            <JFXButton buttonType="RAISED" layoutX="688.0" layoutY="272.0" onAction="#btnDeleteOnAction" prefHeight="42.0" prefWidth="138.0" style="-fx-background-color: #b71540; -fx-background-radius: 20;" text="Delete Employee" textFill="#f5f6fa">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
             </JFXButton>
-            <JFXButton buttonType="RAISED" layoutX="681.0" layoutY="348.0" onAction="#btnUpdateOnAction" prefHeight="42.0" prefWidth="138.0" style="-fx-background-color: #e1b12c; -fx-background-radius: 20;" text="Update Employee" textFill="#f5f6fa">
+            <JFXButton buttonType="RAISED" layoutX="688.0" layoutY="348.0" onAction="#btnUpdateOnAction" prefHeight="42.0" prefWidth="138.0" style="-fx-background-color: #e1b12c; -fx-background-radius: 20;" text="Update Employee" textFill="#f5f6fa">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
             </JFXButton>
-            <JFXButton buttonType="RAISED" layoutX="681.0" layoutY="428.0" onAction="#btnSearchOnAction" prefHeight="42.0" prefWidth="138.0" style="-fx-background-color: #273c75; -fx-background-radius: 20;" text="Search Employee" textFill="#f5f6fa">
+            <JFXButton buttonType="RAISED" layoutX="688.0" layoutY="423.0" onAction="#btnSearchOnAction" prefHeight="42.0" prefWidth="138.0" style="-fx-background-color: #273c75; -fx-background-radius: 20;" text="Search Employee" textFill="#f5f6fa">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
@@ -88,7 +88,7 @@
                   <Image url="@image/icons8-employee-64.png" />
                </image>
             </ImageView>
-            <TableView fx:id="tblEmployee" layoutX="866.0" layoutY="125.0" prefHeight="492.0" prefWidth="610.0">
+            <TableView fx:id="tblEmployee" layoutX="850.0" layoutY="125.0" prefHeight="448.0" prefWidth="626.0">
               <columns>
                 <TableColumn fx:id="colid" prefWidth="150.4000244140625" text="Employee_id" />
                 <TableColumn minWidth="0.0" prefWidth="0.0" text="C2" />
@@ -102,16 +102,21 @@
                   <Font name="System Bold Italic" size="18.0" />
                </font>
             </Label>
-            <JFXButton buttonType="RAISED" layoutX="21.0" layoutY="591.0" onAction="#btnBackOnAction" prefHeight="35.0" prefWidth="70.0" style="-fx-background-color: #273c75; -fx-background-radius: 30;" text="Back" textFill="#f5f6fa">
+            <JFXButton buttonType="RAISED" layoutX="1389.0" layoutY="14.0" onAction="#btnBackOnAction" prefHeight="35.0" prefWidth="94.0" style="-fx-background-color: #7bed9f; -fx-background-radius: 30;" text="      Home" textFill="#0d0d0d">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
             </JFXButton>
-            <JFXButton buttonType="RAISED" layoutX="681.0" layoutY="507.0" onAction="#btnClearOnAction" prefHeight="42.0" prefWidth="138.0" style="-fx-background-color: #9980FA; -fx-background-radius: 20;" text="Clear" textFill="#f5f6fa">
+            <JFXButton buttonType="RAISED" layoutX="688.0" layoutY="506.0" onAction="#btnClearOnAction" prefHeight="42.0" prefWidth="138.0" style="-fx-background-color: #9980FA; -fx-background-radius: 20;" text="Clear" textFill="#f5f6fa">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
             </JFXButton>
+            <ImageView fitHeight="18.0" fitWidth="24.0" layoutX="1399.0" layoutY="20.0">
+               <image>
+                  <Image url="@image/icons8-home-50.png" />
+               </image>
+            </ImageView>
          </children>
       </AnchorPane>
    </children>
