--- a/src/main/resources/view/item_form.fxml
+++ b/src/main/resources/view/item_form.fxml
@@ -14,12 +14,12 @@
    <children>
       <AnchorPane prefHeight="650.0" prefWidth="1500.0" style="-fx-background-color: #c8d6e5;">
          <children>
-            <ImageView fitHeight="305.0" fitWidth="310.0" layoutX="27.0" layoutY="133.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="305.0" fitWidth="310.0" layoutX="24.0" layoutY="184.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@image/item_manage.png" />
                </image>
             </ImageView>
-            <AnchorPane layoutX="371.0" layoutY="123.0" prefHeight="510.0" prefWidth="378.0" style="-fx-background-color: #718093; -fx-background-radius: 40;">
+            <AnchorPane layoutX="345.0" layoutY="117.0" prefHeight="499.0" prefWidth="378.0" style="-fx-background-color: #718093; -fx-background-radius: 40;">
                <children>
                   <Label layoutX="115.0" layoutY="14.0" text="Fill this Form">
                      <font>
@@ -29,7 +29,7 @@
                   <TextField fx:id="txtid" layoutX="105.0" layoutY="133.0" prefHeight="26.0" prefWidth="240.0" style="-fx-background-radius: 30;" />
                   <TextField fx:id="txtname" layoutX="105.0" layoutY="228.0" prefHeight="26.0" prefWidth="240.0" style="-fx-background-radius: 30;" />
                   <TextField fx:id="txtqtyOnHand" layoutX="105.0" layoutY="326.0" prefHeight="26.0" prefWidth="240.0" style="-fx-background-radius: 30;" />
-                  <TextField fx:id="txtunitPrice" layoutX="105.0" layoutY="429.0" prefHeight="26.0" prefWidth="240.0" style="-fx-background-radius: 30;" />
+                  <TextField fx:id="txtunitPrice" layoutX="105.0" layoutY="419.0" prefHeight="26.0" prefWidth="240.0" style="-fx-background-radius: 30;" />
                   <Label layoutX="36.0" layoutY="137.0" text="Item Id">
                      <font>
                         <Font name="System Bold" size="12.0" />
@@ -45,7 +45,7 @@
                         <Font name="System Bold" size="12.0" />
                      </font>
                   </Label>
-                  <Label layoutX="29.0" layoutY="433.0" text="Unit Price">
+                  <Label layoutX="28.0" layoutY="423.0" text="Unit Price">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
@@ -57,17 +57,17 @@
                   <Font name="System Bold" size="24.0" />
                </font>
             </Label>
-            <JFXButton buttonType="RAISED" layoutX="768.0" layoutY="218.0" onAction="#btnAddOnAction" prefHeight="35.0" prefWidth="122.0" style="-fx-background-color: #44bd32; -fx-background-radius: 20;" text="Add Item" textFill="#f5f6fa">
+            <JFXButton buttonType="RAISED" layoutX="750.0" layoutY="222.0" onAction="#btnAddOnAction" prefHeight="35.0" prefWidth="122.0" style="-fx-background-color: #44bd32; -fx-background-radius: 20;" text="Add Item" textFill="#f5f6fa">
                <font>
                   <Font name="System Bold" size="11.0" />
                </font>
             </JFXButton>
-            <JFXButton buttonType="RAISED" layoutX="768.0" layoutY="301.0" onAction="#btnDeleteOnAction" prefHeight="35.0" prefWidth="122.0" style="-fx-background-color: #e84118; -fx-background-radius: 20;" text="Delete Item" textFill="#f5f6fa">
+            <JFXButton buttonType="RAISED" layoutX="750.0" layoutY="301.0" onAction="#btnDeleteOnAction" prefHeight="35.0" prefWidth="122.0" style="-fx-background-color: #e84118; -fx-background-radius: 20;" text="Delete Item" textFill="#f5f6fa">
                <font>
                   <Font name="System Bold" size="11.0" />
                </font>
             </JFXButton>
-            <JFXButton buttonType="RAISED" layoutX="768.0" layoutY="383.0" onAction="#btnUpdateOnAction" prefHeight="35.0" prefWidth="122.0" style="-fx-background-color: #e1b12c; -fx-background-radius: 20;" text="Update Item" textFill="#f5f6fa">
+            <JFXButton buttonType="RAISED" layoutX="750.0" layoutY="385.0" onAction="#btnUpdateOnAction" prefHeight="35.0" prefWidth="122.0" style="-fx-background-color: #e1b12c; -fx-background-radius: 20;" text="Update Item" textFill="#f5f6fa">
                <font>
                   <Font name="System Bold" size="11.0" />
                </font>
@@ -96,21 +96,26 @@
                   <TableColumn fx:id="colUnitPrice" prefWidth="150.40008544921875" text="UnitPrice" />
               </columns>
             </TableView>
-            <Label layoutX="1015.0" layoutY="61.0" text="Here is the Table View For Items" textFill="#fc3030">
+            <Label layoutX="1048.0" layoutY="70.0" text="Here is the Table View For Items" textFill="#fc3030">
                <font>
-                  <Font name="System Bold Italic" size="24.0" />
+                  <Font name="System Bold Italic" size="18.0" />
                </font>
             </Label>
-            <JFXButton buttonType="RAISED" layoutX="14.0" layoutY="597.0" onAction="#btnBackOnAction" prefHeight="35.0" prefWidth="65.0" style="-fx-background-color: #273c75; -fx-background-radius: 40;" text="Back" textFill="#f5f6fa">
+            <JFXButton buttonType="RAISED" layoutX="1411.0" layoutY="17.0" onAction="#btnBackOnAction" prefHeight="35.0" prefWidth="81.0" style="-fx-background-color: #7bed9f; -fx-background-radius: 40;" text="      Home" textFill="#0a0a0b">
                <font>
                   <Font name="System Bold" size="11.0" />
                </font>
             </JFXButton>
-            <JFXButton buttonType="RAISED" layoutX="768.0" layoutY="471.0" onAction="#btnClearOnAction" prefHeight="35.0" prefWidth="122.0" style="-fx-background-color: #9980FA; -fx-background-radius: 20;" text="Search" textFill="#f5f6fa">
+            <JFXButton buttonType="RAISED" layoutX="750.0" layoutY="471.0" onAction="#btnClearOnAction" prefHeight="35.0" prefWidth="122.0" style="-fx-background-color: #9980FA; -fx-background-radius: 20;" text="Search" textFill="#f5f6fa">
                <font>
                   <Font name="System Bold" size="11.0" />
                </font>
             </JFXButton>
+            <ImageView fitHeight="18.0" fitWidth="24.0" layoutX="1418.0" layoutY="26.0">
+               <image>
+                  <Image url="@image/icons8-home-50.png" />
+               </image>
+            </ImageView>
          </children>
       </AnchorPane>
    </children>
