--- a/src/main/resources/view/report_form.fxml
+++ b/src/main/resources/view/report_form.fxml
@@ -13,31 +13,36 @@
    <children>
       <AnchorPane prefHeight="650.0" prefWidth="1500.0" style="-fx-background-color: #d2dae2;">
          <children>
-            <ImageView fitHeight="353.0" fitWidth="365.0" layoutY="142.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="353.0" fitWidth="365.0" layoutX="14.0" layoutY="138.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@image/500_F_112921427_l8VWy8yvbcdqjicMJYF0u2vG3YDpZmiA.jpg" />
                </image>
             </ImageView>
-            <Label layoutX="605.0" layoutY="14.0" prefHeight="35.0" prefWidth="289.0" style="-fx-background-color: #05c46b; -fx-background-radius: 40;" text="        Manage Report">
+            <Label layoutX="605.0" layoutY="14.0" prefHeight="35.0" prefWidth="415.0" style="-fx-background-color: #05c46b; -fx-background-radius: 40;" text="                     Manage Report">
                <font>
                   <Font name="System Bold Italic" size="24.0" />
                </font>
             </Label>
-            <TextField layoutX="14.0" layoutY="19.0" prefHeight="26.0" prefWidth="270.0" text="Search Something here...">
+            <TextField layoutX="41.0" layoutY="18.0" prefHeight="26.0" prefWidth="270.0" text="Search Something here...">
                <font>
                   <Font size="11.0" />
                </font>
             </TextField>
-            <ImageView layoutX="260.0" layoutY="20.0">
+            <ImageView layoutX="279.0" layoutY="19.0">
                <image>
                   <Image url="@image/icons8-search-24.png" />
                </image>
             </ImageView>
-            <JFXButton buttonType="RAISED" layoutX="14.0" layoutY="600.0" onAction="#btnBackOnAction" prefHeight="35.0" prefWidth="66.0" style="-fx-background-color: #273c75; -fx-background-radius: 40;" text="Back" textFill="#f5f6fa">
+            <JFXButton buttonType="RAISED" layoutX="1365.0" layoutY="14.0" onAction="#btnBackOnAction" prefHeight="35.0" prefWidth="84.0" style="-fx-background-color: #7bed9f; -fx-background-radius: 40;" text="       Home" textFill="#0f0f10">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
             </JFXButton>
+            <ImageView fitHeight="18.0" fitWidth="24.0" layoutX="1372.0" layoutY="23.0">
+               <image>
+                  <Image url="@image/icons8-home-50.png" />
+               </image>
+            </ImageView>
          </children>
          <cursor>
             <Cursor fx:constant="HAND" />
