--- a/src/main/resources/view/rowMaterial_form.fxml
+++ b/src/main/resources/view/rowMaterial_form.fxml
@@ -15,12 +15,12 @@
    <children>
       <AnchorPane prefHeight="650.0" prefWidth="1500.0" style="-fx-background-color: #d1d8e0;" stylesheets="@Css/Customer.css">
          <children>
-            <ImageView fitHeight="373.0" fitWidth="342.0" layoutX="14.0" layoutY="159.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="365.0" fitWidth="313.0" layoutX="14.0" layoutY="159.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@image/raw-materials-rubber-stamp-vector-12469456.jpg" />
                </image>
             </ImageView>
-            <AnchorPane layoutX="364.0" layoutY="124.0" prefHeight="462.0" prefWidth="355.0" style="-fx-background-color: #718093;">
+            <AnchorPane layoutX="364.0" layoutY="124.0" prefHeight="462.0" prefWidth="355.0" style="-fx-background-color: #718093; -fx-background-radius: 50;">
                <children>
                   <Label layoutX="21.0" layoutY="117.0" text="Material Id">
                      <font>
@@ -53,13 +53,13 @@
                   </Label>
                </children>
             </AnchorPane>
-            <Label layoutX="364.0" layoutY="14.0" prefHeight="35.0" prefWidth="286.0" style="-fx-background-color: #9c88ff; -fx-background-radius: 40;" text="  Manage Raw Materials" textFill="#2f3542">
+            <Label layoutX="364.0" layoutY="14.0" prefHeight="35.0" prefWidth="456.0" style="-fx-background-color: #9c88ff; -fx-background-radius: 40;" text="                Manage Raw Materials" textFill="#2f3542">
                <font>
                   <Font name="System Bold" size="24.0" />
                </font>
             </Label>
             <TextField layoutX="14.0" layoutY="19.0" prefHeight="26.0" prefWidth="256.0" text="Search Something Here....." />
-            <JFXButton id="stadd" buttonType="RAISED" layoutX="732.0" layoutY="231.0" onAction="#btnAddMaterialOnAction" prefHeight="35.0" prefWidth="118.0" style="-fx-background-color: #44bd32; -fx-background-radius: 30;" stylesheets="@Css/Customer.css" text="Add Material" textFill="#f5f6fa">
+            <JFXButton id="stadd" buttonType="RAISED" layoutX="740.0" layoutY="232.0" onAction="#btnAddMaterialOnAction" prefHeight="35.0" prefWidth="118.0" style="-fx-background-color: #44bd32; -fx-background-radius: 30;" stylesheets="@Css/Customer.css" text="Add Material" textFill="#f5f6fa">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
@@ -67,7 +67,7 @@
                   <Font name="System Bold" size="12.0" />
                </font>
             </JFXButton>
-            <JFXButton buttonType="RAISED" layoutX="732.0" layoutY="307.0" onAction="#btnUpdateMaterialOnAction" prefHeight="35.0" prefWidth="118.0" style="-fx-background-color: #e1b12c; -fx-background-radius: 30;" text="Update Material" textFill="#f5f6fa">
+            <JFXButton buttonType="RAISED" layoutX="740.0" layoutY="308.0" onAction="#btnUpdateMaterialOnAction" prefHeight="35.0" prefWidth="118.0" style="-fx-background-color: #e1b12c; -fx-background-radius: 30;" text="Update Material" textFill="#f5f6fa">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
@@ -75,7 +75,7 @@
                   <Font name="System Bold" size="12.0" />
                </font>
             </JFXButton>
-            <JFXButton buttonType="RAISED" layoutX="732.0" layoutY="382.0" onAction="#btnDeleteMaterialOnAction" prefHeight="35.0" prefWidth="118.0" style="-fx-background-color: #e84118; -fx-background-radius: 30;" text="Delete Material" textFill="#f5f6fa">
+            <JFXButton buttonType="RAISED" layoutX="740.0" layoutY="382.0" onAction="#btnDeleteMaterialOnAction" prefHeight="35.0" prefWidth="118.0" style="-fx-background-color: #e84118; -fx-background-radius: 30;" text="Delete Material" textFill="#f5f6fa">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
@@ -83,7 +83,7 @@
                   <Font name="System Bold" size="12.0" />
                </font>
             </JFXButton>
-            <ImageView layoutX="668.0" layoutY="10.0">
+            <ImageView layoutX="850.0" layoutY="13.0">
                <image>
                   <Image url="@image/icons8-material-64.png" />
                </image>
@@ -93,7 +93,7 @@
                   <Image url="@image/icons8-search-24.png" />
                </image>
             </ImageView>
-            <JFXButton buttonType="RAISED" layoutX="14.0" layoutY="592.0" onAction="#btnBackOnAction" prefHeight="35.0" prefWidth="62.0" style="-fx-background-color: #273c75; -fx-background-radius: 40;" text="Back" textFill="#f5f6fa">
+            <JFXButton buttonType="RAISED" layoutX="1391.0" layoutY="14.0" onAction="#btnBackOnAction" prefHeight="35.0" prefWidth="84.0" style="-fx-background-color: #7bed9f; -fx-background-radius: 40;" text="        Home" textFill="#181818">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
@@ -101,7 +101,7 @@
                   <Font name="System Bold" size="12.0" />
                </font>
             </JFXButton>
-            <TableView fx:id="tblRowMaterial" layoutX="880.0" layoutY="119.0" prefHeight="490.0" prefWidth="605.0">
+            <TableView fx:id="tblRowMaterial" layoutX="879.0" layoutY="119.0" prefHeight="473.0" prefWidth="607.0">
               <columns>
                 <TableColumn fx:id="colid" prefWidth="150.4000244140625" text="Row_id" />
                 <TableColumn minWidth="0.0" prefWidth="0.0" text="C2" />
@@ -112,10 +112,10 @@
             </TableView>
             <Label layoutX="954.0" layoutY="66.0" text="Here is the table view for RowMaterials" textFill="#f71919">
                <font>
-                  <Font name="System Bold Italic" size="24.0" />
+                  <Font name="System Bold Italic" size="18.0" />
                </font>
             </Label>
-            <JFXButton buttonType="RAISED" layoutX="732.0" layoutY="456.0" onAction="#btnClearOnAction" prefHeight="35.0" prefWidth="118.0" style="-fx-background-color: #9980FA; -fx-background-radius: 30;" text="Search" textFill="#f5f6fa">
+            <JFXButton buttonType="RAISED" layoutX="740.0" layoutY="457.0" onAction="#btnClearOnAction" prefHeight="35.0" prefWidth="118.0" style="-fx-background-color: #9980FA; -fx-background-radius: 30;" text="Search" textFill="#f5f6fa">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
@@ -123,6 +123,11 @@
                   <Font name="System Bold" size="12.0" />
                </font>
             </JFXButton>
+            <ImageView fitHeight="18.0" fitWidth="24.0" layoutX="1397.0" layoutY="23.0">
+               <image>
+                  <Image url="@image/icons8-home-50.png" />
+               </image>
+            </ImageView>
          </children>
       </AnchorPane>
    </children>
