--- a/src/main/resources/view/report_form.fxml
+++ b/src/main/resources/view/report_form.fxml
@@ -11,9 +11,9 @@
 
 <AnchorPane fx:id="rootNode" prefHeight="500.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.Controller.ReportFormController">
    <children>
-      <AnchorPane prefHeight="650.0" prefWidth="1500.0" style="-fx-background-color: #d2dae2;">
+      <AnchorPane prefHeight="650.0" prefWidth="1295.0" style="-fx-background-color: #d2dae2;">
          <children>
-            <ImageView fitHeight="353.0" fitWidth="365.0" layoutX="14.0" layoutY="138.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="389.0" fitWidth="366.0" layoutX="22.0" layoutY="114.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@image/500_F_112921427_l8VWy8yvbcdqjicMJYF0u2vG3YDpZmiA.jpg" />
                </image>
@@ -33,14 +33,59 @@
                   <Image url="@image/icons8-search-24.png" />
                </image>
             </ImageView>
-            <JFXButton buttonType="RAISED" layoutX="1365.0" layoutY="14.0" onAction="#btnBackOnAction" prefHeight="35.0" prefWidth="84.0" style="-fx-background-color: #7bed9f; -fx-background-radius: 40;" text="       Home" textFill="#0f0f10">
+            <JFXButton buttonType="RAISED" layoutX="1189.0" layoutY="14.0" onAction="#btnBackOnAction" prefHeight="35.0" prefWidth="84.0" style="-fx-background-color: #7bed9f; -fx-background-radius: 40;" text="       Home" textFill="#0f0f10">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
             </JFXButton>
-            <ImageView fitHeight="18.0" fitWidth="24.0" layoutX="1372.0" layoutY="23.0">
+            <ImageView fitHeight="18.0" fitWidth="24.0" layoutX="1200.0" layoutY="23.0">
                <image>
                   <Image url="@image/icons8-home-50.png" />
+               </image>
+            </ImageView>
+            <JFXButton buttonType="RAISED" layoutX="475.0" layoutY="104.0" onAction="#printEmployeeAttendanceReport" prefHeight="250.0" prefWidth="242.0" style="-fx-background-color: #70a1ff; -fx-background-radius: 60;" text="Button">
+               <font>
+                  <Font name="System Bold" size="14.0" />
+               </font>
+            </JFXButton>
+            <ImageView fitHeight="141.0" fitWidth="154.0" layoutX="519.0" layoutY="199.0">
+               <image>
+                  <Image url="@image/icons8-list-100.png" />
+               </image>
+            </ImageView>
+            <Label layoutX="532.0" layoutY="144.0" text="Print Employee" textFill="#050505">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </Label>
+            <Label layoutX="516.0" layoutY="172.0" text="Attendance Report" textFill="#0b0b0b">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </Label>
+            <JFXButton buttonType="RAISED" layoutX="961.0" layoutY="108.0" onAction="#printItemReportOnAction" prefHeight="242.0" prefWidth="241.0" style="-fx-background-color: #70a1ff; -fx-background-radius: 60;">
+               <font>
+                  <Font name="System Bold" size="14.0" />
+               </font>
+            </JFXButton>
+            <ImageView fitHeight="119.0" fitWidth="142.0" layoutX="1011.0" layoutY="199.0">
+               <image>
+                  <Image url="@image/icons8-list-100.png" />
+               </image>
+            </ImageView>
+            <Label layoutX="1008.0" layoutY="144.0" text="Print Item Details" textFill="#050505">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </Label>
+            <Label layoutX="1052.0" layoutY="172.0" text="Report" textFill="#0b0b0b">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </Label>
+            <ImageView fitHeight="46.0" fitWidth="41.0" layoutX="1040.0" layoutY="18.0">
+               <image>
+                  <Image url="@image/icons8-items-64.png" />
                </image>
             </ImageView>
          </children>
