--- a/src/main/resources/view/report_form.fxml
+++ b/src/main/resources/view/report_form.fxml
@@ -43,44 +43,44 @@
                   <Image url="@image/icons8-home-50.png" />
                </image>
             </ImageView>
-            <JFXButton buttonType="RAISED" layoutX="475.0" layoutY="104.0" onAction="#printEmployeeAttendanceReport" prefHeight="250.0" prefWidth="242.0" style="-fx-background-color: #70a1ff; -fx-background-radius: 60;" text="Button">
+            <JFXButton buttonType="RAISED" layoutX="463.0" layoutY="104.0" onAction="#printEmployeeAttendanceReport" prefHeight="119.0" prefWidth="250.0" style="-fx-background-color: #70a1ff; -fx-background-radius: 60;">
                <font>
                   <Font name="System Bold" size="14.0" />
                </font>
             </JFXButton>
-            <ImageView fitHeight="141.0" fitWidth="154.0" layoutX="519.0" layoutY="199.0">
+            <ImageView fitHeight="46.0" fitWidth="68.0" layoutX="553.0" layoutY="144.0">
                <image>
                   <Image url="@image/icons8-list-100.png" />
                </image>
             </ImageView>
-            <Label layoutX="532.0" layoutY="144.0" text="Print Employee" textFill="#050505">
+            <Label layoutX="538.0" layoutY="114.0" text="Print Employee" textFill="#050505">
                <font>
-                  <Font name="System Bold" size="18.0" />
+                  <Font name="System Bold" size="14.0" />
                </font>
             </Label>
-            <Label layoutX="516.0" layoutY="172.0" text="Attendance Report" textFill="#0b0b0b">
+            <Label layoutX="525.0" layoutY="134.0" text="Attendance Report" textFill="#0b0b0b">
                <font>
-                  <Font name="System Bold" size="18.0" />
+                  <Font name="System Bold" size="14.0" />
                </font>
             </Label>
-            <JFXButton buttonType="RAISED" layoutX="961.0" layoutY="108.0" onAction="#printItemReportOnAction" prefHeight="242.0" prefWidth="241.0" style="-fx-background-color: #70a1ff; -fx-background-radius: 60;">
+            <JFXButton buttonType="RAISED" layoutX="450.0" layoutY="498.0" onAction="#printItemReportOnAction" prefHeight="119.0" prefWidth="250.0" style="-fx-background-color: #70a1ff; -fx-background-radius: 60;">
                <font>
                   <Font name="System Bold" size="14.0" />
                </font>
             </JFXButton>
-            <ImageView fitHeight="119.0" fitWidth="142.0" layoutX="1011.0" layoutY="199.0">
+            <ImageView fitHeight="46.0" fitWidth="68.0" layoutX="541.0" layoutY="544.0">
                <image>
                   <Image url="@image/icons8-list-100.png" />
                </image>
             </ImageView>
-            <Label layoutX="1008.0" layoutY="144.0" text="Print Item Details" textFill="#050505">
+            <Label layoutX="517.0" layoutY="514.0" text="Print Item Details" textFill="#050505">
                <font>
-                  <Font name="System Bold" size="18.0" />
+                  <Font name="System Bold" size="14.0" />
                </font>
             </Label>
-            <Label layoutX="1052.0" layoutY="172.0" text="Report" textFill="#0b0b0b">
+            <Label layoutX="552.0" layoutY="534.0" text="Report" textFill="#0b0b0b">
                <font>
-                  <Font name="System Bold" size="18.0" />
+                  <Font name="System Bold" size="14.0" />
                </font>
             </Label>
             <ImageView fitHeight="46.0" fitWidth="41.0" layoutX="1040.0" layoutY="18.0">
@@ -88,6 +88,21 @@
                   <Image url="@image/icons8-items-64.png" />
                </image>
             </ImageView>
+            <JFXButton buttonType="RAISED" layoutX="463.0" layoutY="310.0" onAction="#btn3OnAction" prefHeight="119.0" prefWidth="249.0" style="-fx-background-color: #70a1ff; -fx-background-radius: 60;" text="Button">
+               <font>
+                  <Font name="System Bold" size="14.0" />
+               </font>
+            </JFXButton>
+            <ImageView fitHeight="46.0" fitWidth="68.0" layoutX="554.0" layoutY="352.0">
+               <image>
+                  <Image url="@image/icons8-list-100.png" />
+               </image>
+            </ImageView>
+            <Label layoutX="526.0" layoutY="325.0" text="Print Order Details" textFill="#050505">
+               <font>
+                  <Font name="System Bold" size="14.0" />
+               </font>
+            </Label>
          </children>
          <cursor>
             <Cursor fx:constant="HAND" />
