--- a/src/main/resources/view/Dashboard_form.fxml
+++ b/src/main/resources/view/Dashboard_form.fxml
@@ -160,11 +160,21 @@
                   <Font size="10.0" />
                </font>
             </Label>
-            <Label fx:id="lblDate" layoutX="1088.0" layoutY="16.0" prefHeight="34.0" prefWidth="156.0" textFill="#212123">
-               <font>
-                  <Font name="System Bold Italic" size="24.0" />
-               </font>
-            </Label>
+            <AnchorPane layoutX="993.0" layoutY="12.0" prefHeight="43.0" prefWidth="222.0" style="-fx-background-color: #a4b0be; -fx-background-radius: 70;">
+               <children>
+                  <ImageView fitHeight="27.0" fitWidth="29.0" layoutX="19.0" layoutY="10.0">
+                     <image>
+                        <Image url="@image/icons8-date.gif" />
+                     </image>
+                  </ImageView>
+                  <Label fx:id="lblDate" layoutX="57.0" layoutY="6.0" prefHeight="35.0" prefWidth="147.0" textFill="#212123">
+                     <font>
+                        <Font name="System Bold Italic" size="24.0" />
+                     </font>
+                  </Label>
+               </children>
+            </AnchorPane>
+            <AnchorPane layoutX="418.0" layoutY="128.0" prefHeight="479.0" prefWidth="816.0" style="-fx-background-color: #95afc0; -fx-background-radius: 60;" />
             <BarChart fx:id="BarChart" layoutX="441.0" layoutY="174.0" prefHeight="418.0" prefWidth="742.0" stylesheets="@Css/style.css">
               <xAxis>
                 <CategoryAxis side="BOTTOM" />
@@ -173,22 +183,18 @@
                 <NumberAxis side="LEFT" />
               </yAxis>
             </BarChart>
-            <Label fx:id="lbltime" layoutX="493.0" layoutY="17.0" prefHeight="35.0" prefWidth="271.0">
+            <AnchorPane layoutX="418.0" layoutY="13.0" prefHeight="43.0" prefWidth="222.0" style="-fx-background-color: #a4b0be; -fx-background-radius: 70;" />
+            <Label fx:id="lbltime" layoutX="493.0" layoutY="17.0" prefHeight="35.0" prefWidth="130.0">
                <font>
                   <Font name="System Bold Italic" size="24.0" />
                </font>
             </Label>
-            <ImageView fitHeight="27.0" fitWidth="29.0" layoutX="1045.0" layoutY="21.0">
-               <image>
-                  <Image url="@image/icons8-date.gif" />
-               </image>
-            </ImageView>
             <ImageView fitHeight="27.0" fitWidth="30.0" layoutX="441.0" layoutY="20.0">
                <image>
                   <Image url="@image/icons8-time.gif" />
                </image>
             </ImageView>
-            <AnchorPane layoutX="35.0" layoutY="78.0" prefHeight="161.0" prefWidth="294.0" style="-fx-background-color: #f1f2f6; -fx-background-radius: 40;">
+            <AnchorPane layoutX="35.0" layoutY="78.0" prefHeight="161.0" prefWidth="294.0" style="-fx-background-color: #63cdda; -fx-background-radius: 40;">
                <children>
                   <ImageView fitHeight="43.0" fitWidth="55.0" layoutX="14.0" layoutY="19.0">
                      <image>
@@ -207,7 +213,7 @@
                   </Label>
                </children>
             </AnchorPane>
-            <AnchorPane layoutX="40.0" layoutY="259.0" prefHeight="162.0" prefWidth="294.0" style="-fx-background-color: #f1f2f6; -fx-background-radius: 40;">
+            <AnchorPane layoutX="40.0" layoutY="259.0" prefHeight="162.0" prefWidth="294.0" style="-fx-background-color: #63cdda; -fx-background-radius: 40;">
                <children>
                   <Label fx:id="lblEmployeeCount" layoutX="85.0" layoutY="71.0" prefHeight="58.0" prefWidth="120.0">
                      <font>
@@ -226,7 +232,7 @@
                   <Font name="System Bold" size="18.0" />
                </font>
             </Label>
-            <AnchorPane layoutX="40.0" layoutY="444.0" prefHeight="162.0" prefWidth="294.0" style="-fx-background-color: #f1f2f6; -fx-background-radius: 40;">
+            <AnchorPane layoutX="40.0" layoutY="444.0" prefHeight="162.0" prefWidth="294.0" style="-fx-background-color: #63cdda; -fx-background-radius: 40;">
                <children>
                   <Label fx:id="lblSupplierCount" layoutX="87.0" layoutY="62.0" prefHeight="58.0" prefWidth="120.0">
                      <font>
